--- a/ControllerTest/ControllerTesting.csproj
+++ b/ControllerTest/ControllerTesting.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coinbase" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
