--- a/WebApp2Prosjekt/WebApp2Prosjekt.csproj
+++ b/WebApp2Prosjekt/WebApp2Prosjekt.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coinbase" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
